# razor-voice-service

./: .env.example  .gitignore  AGENT_LOOP.md  CLAUDE.md  README.md  STATUS.md  VOICE_RESEARCH.md  com.razor.brain.plist  com.razor.voice.plist  config.json  fellow-voice-commands.md  install.sh  main.js  package-lock.json  package.json  ptt.sh  razor_brain.server  test-biggest.mjs  test-sf.mjs
.claude/: settings.local.json
api/: openclaw.js  stt.js  tts.js
audio/: bluetooth.js  capture.js  hotkey.js  playback.js  wakeword.js
brain/: README.md  pyproject.toml  requirements.txt
brain/razor_brain/: SYSTEM_PROMPT.md  __init__.py  context.py  engine.py  entity_memory.py  examples.py  gateway.py  prompts.py  server.py  state.py
brain/tests/: test_engine.py  test_server.py  test_websocket_integration.py
data/: MEMORY.md
docs/: VISUAL_CORTEX_INTEGRATION.md
lib/: log.js
orchestrator/: agent-watcher.js  complete.js  index.js  orchestrator.js  run-agent.sh  start.sh  view-tasks.sh
public/: README.md  index-launcher-backup.html  index.html  razor-sphere.html
rcdl/: complete.js  engine.js  feedback.js  start.sh  state.json  status.js
scripts/: agent-runner.sh  generate-acks.js  generate-fillers.js  install-daemon.sh  oauth-setup.js  task-status.sh  test-ae-day.sh  test-bridge-simulator.js  uninstall-daemon.sh  watchdog.sh
src/: config.js  health-server.js  index.js  razor-local.js  visual-cortex-bridge.js
state/: current.json  machine.js  proactive.js
tests/: integrations.test.js  memory.test.js  stateMachine.test.js  userState.test.js  voice-e2e.test.js
(+76 files in other folders)
