[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "razor-brain"
version = "1.0.0"
description = "Razor Brain — Conversation Intelligence Engine. Zero hardcoded commands."
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0,<14.0",
    "aiohttp>=3.9,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[project.scripts]
razor-brain = "razor_brain.server:main"
